<resources>
    <string name="app_name">Vocabbly App</string>
    <string name="splash_screen_motto">Building Vocabulary One Word \nAt A Time</string>
    <string name="splash_screen_title">Vocabbly</string>
    <string name="gre_card_title">Practice Words for GRE</string>
    <string name="Toefl_card_title">Practice Words for TOEFL or IELTS</string>
    <string name="basic_card_title">Practice Basic Words</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="word_type">New Word</string>
    <string name="word_type_note">Select the best definition</string>
    <string name="demo_word">Abash</string>
    <string name="demo_option1">to reduceee</string>
    <string name="demo_option2">to make ashamed</string>
    <string name="demo_option3">to step down from a position</string>
    <string name="demo_option4">to deny oneself things</string>
    <string name="incorrect_status">Incorrect</string>
    <string name="incorrect_note">You\'ll see this word again soon</string>
    <string name="word_definition">Definition:</string>
    <string name="word_example">Examples:</string>
    <string name="demo_definition">to subside; to reduce</string>
    <string name="demo_examples">George spilled a pot of hot coffee on his leg. It hurt quite a bit. Then, gradually, the agony abated</string>
    <string name="correct_status">Correct!</string>
    <string name="correct_note">You won\'t see this word for a while.</string>
    <string name="next_word">Next Word</string>
</resources>