<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_word_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WordQuizFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/warm_sand"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/word_boxes"
            android:background="@color/deep_blue">

            <TextView
                android:id="@+id/word_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/word_type"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintVertical_bias="0.2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/word_status_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/word_type_note"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/word_status"
                app:layout_constraintVertical_bias="0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/word_boxes"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/word"
            android:layout_marginTop="16dp"
            android:text="@string/demo_word"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/word_boxes"
            android:gravity="start|center_vertical"
            android:background="@drawable/ripple"
            android:clickable="true"
            android:paddingStart="16dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:id="@+id/word_option3"
            android:layout_marginTop="16dp"
            android:text="@string/demo_option1"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/word_boxes"
            android:gravity="start|center_vertical"
            android:background="@drawable/ripple"
            android:clickable="true"
            android:paddingStart="16dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:id="@+id/word_option1"
            android:layout_marginTop="16dp"
            android:text="@string/demo_option2"
            />
        <TextView
            android:id="@+id/word_option2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/word_boxes"
            android:layout_marginTop="16dp"
            android:background="@drawable/ripple"
            android:clickable="true"
            android:gravity="start|center_vertical"
            android:paddingStart="16dp"
            android:text="@string/demo_option3"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/word_boxes"
            android:gravity="start|center_vertical"
            android:background="@drawable/ripple"
            android:clickable="true"
            android:paddingStart="16dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:id="@+id/word_option4"
            android:layout_marginTop="16dp"
            android:text="@string/demo_option4"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>


</FrameLayout>