<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WordDetailsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/warm_sand"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_incorrect"
                android:layout_width="match_parent"
                android:layout_height="@dimen/word_boxes"
                android:visibility="gone"
                android:background="@color/incorrect_bg">

                <TextView
                    android:id="@+id/word_status_correct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/incorrect_status"
                    android:textColor="@color/incorrect_txt"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintVertical_bias="0.2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/word_status_correct_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/incorrect_note"
                    android:textColor="@color/incorrect_txt"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/word_status_correct"
                    app:layout_constraintVertical_bias="0" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_correct"
                android:layout_width="match_parent"
                android:layout_height="@dimen/word_boxes"
                android:visibility="visible"
                android:background="@color/correct_bg">

                <TextView
                    android:id="@+id/word_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/correct_status"
                    android:textColor="@color/correct_txt"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintVertical_bias="0.2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/word_status_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/correct_note"
                    android:textColor="@color/correct_txt"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/word_status"
                    app:layout_constraintVertical_bias="0" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/word"
                android:layout_width="match_parent"
                android:layout_height="@dimen/word_boxes"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/demo_word"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="start"
                android:text="@string/word_definition"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tvDefinition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_text_view"
                android:gravity="start|center_vertical"
                android:text="@string/demo_definition"
                android:paddingStart="16dp"
                android:paddingEnd="8dp"
                android:textColor="@color/black"
                android:textSize="20sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/word_example"
                android:textSize="20sp"
                android:gravity="start"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"
                />

            <TextView
                android:id="@+id/tvExample1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple"
                android:gravity="start|center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="4dp"
                android:text="@string/demo_examples"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvExample2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple"
                android:layout_marginTop="8dp"
                android:gravity="start|center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="4dp"
                android:text="@string/demo_examples"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnNextWord"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/ripple"
                android:backgroundTint="@color/black"
                android:text="@string/next_word"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>

</FrameLayout>