<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/warm_sand"
    tools:context=".VocabblyHome">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/splash_screen_title"
        app:titleTextColor="@color/black"
        app:navigationIcon="@drawable/ic_menu"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/gre_card"

        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:elevation="4dp"
        android:focusable="true"
        android:clickable="true"
        android:background="@drawable/ripple"
        android:padding="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"

            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/gre_card_title"
                android:textColor="@color/black"
                android:textSize="24sp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:elevation="4dp"
        android:background="@drawable/ripple"
        android:clickable="true"

        android:focusable="true"
        android:padding="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"

            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/Toefl_card_title"
                android:textColor="@color/black"
                android:textSize="24sp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        android:clickable="true"
        android:background="@drawable/ripple"
        android:elevation="4dp"
        android:focusable="true"
        android:padding="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/basic_card_title"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:padding="16dp"/>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>